add maven-jetty-debug-lab